--- a/front-end/.github/workflows/deploy.yml
+++ b/front-end/.github/workflows/deploy.yml
@@ -37,7 +37,7 @@ jobs:
           mkdir -p ~/.ssh
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          rsync -avz -e "ssh -o StrictHostKeyChecking=no" front-end/build/ $REMOTE_USER@$REMOTE_HOST:/var/www/html/your-react-app/
+          rsync -avz -e "ssh -o StrictHostKeyChecking=no" front-end/build/ $REMOTE_USER@$REMOTE_HOST:/var/www/banner.spava.in/
       
       - name: Restart Apache
         env:
